--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <!--子模块-->
     <modules>
         <module>mybatis-01</module>
+        <module>mybatis-02</module>
     </modules>
 
     <dependencies>
