--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>mybatis-01</module>
         <module>mybatis-02</module>
+        <module>mybatis-03</module>
+        <module>mybatis-04</module>
     </modules>
 
     <dependencies>
