--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>mybatis-05</module>
         <module>mybatis-06</module>
         <module>mybatis-07</module>
+        <module>mybatis-08</module>
     </modules>
 
     <dependencies>
